Fixed all compilation errors, still have to fix errors in Socket connection